--- a/tex/MathsNotesBase.tex
+++ b/tex/MathsNotesBase.tex
@@ -97,7 +97,7 @@
 \newcommand\sectionTitle\Huge
 \newcommand\subsectionTitle\Large
 \newcommand{\biggerskip}{\bigskip\bigskip}
-\newcommand\subsubsubsection[1]{\textbf{\textit{#1}}\\\\}% this is the level below the last toc/bookmark level
+\newcommand\subsubsubsection[1]{\textbf{\textit{#1}}\\}% this is the level below the last toc/bookmark level
 \newcommand\problem[1]{\paragraph{#1}}
 \newcommand\sidecomment[1]{ \text{\scriptsize{#1}} }
 \newcommand{\divides}{\mid}
