--- a/tex/Pure Mathematics.tex
+++ b/tex/Pure Mathematics.tex
@@ -29,6 +29,8 @@
 	
 	\newpage
 	\chapter{Calculus}\biggerskip
+	\subfile{"\calculusDir/Homogeneity"}
+	\newpage
 	\subfile{"\calculusDir/Taylor Series"}
 	\newpage
 	\subfile{"\calculusDir/The Number e"}
