--- a/tex/reference/code examples.tex
+++ b/tex/reference/code examples.tex
@@ -14,12 +14,18 @@
 	$\bm{x} = 2$
 	
 	\subsection{Align section with iff and sidecomments}
-	\begin{align*}
+	\[\begin{aligned}
 		&& a \in ker \; \phi \iff \phi(a) &= 1 \\
 		&\implies & \phi(ba\inv{a}) &= \phi(a) \cdot 1 \cdot \phi(\inv{a}) \\
 		&\iff & \phi(ba\inv{a}) &= \phi(a)\inv{\phi(a)} &\sidecomment{using \autoref{prop:isomorphism_preserves_structure}} \\
 		&\iff & \phi(ba\inv{a}) &= 1.
-	\end{align*}	
+	\end{aligned}\]
+%	\begin{align*}
+%		&& a \in ker \; \phi \iff \phi(a) &= 1 \\
+%		&\implies & \phi(ba\inv{a}) &= \phi(a) \cdot 1 \cdot \phi(\inv{a}) \\
+%		&\iff & \phi(ba\inv{a}) &= \phi(a)\inv{\phi(a)} &\sidecomment{using \autoref{prop:isomorphism_preserves_structure}} \\
+%		&\iff & \phi(ba\inv{a}) &= 1.
+%	\end{align*}	
 %	\begin{align*}
 %		&&  &=  \\
 %		&\iff &  &=  &\sidecomment{} \\
